# linuxtrackx-ir

./: .gitignore  AI_CONTINUATION_PROMPT.md  AI_CONTINUATION_PROMPT_MFC140_ARCH_FIX.md  APPIMAGE_BUILD_SUCCESS_SUMMARY.md  ARCH_LINUX_WINE32_SUPPORT_SUMMARY.md  AUTHORS  BRANCH_MERGE_PLAN.md  CHANGELOG.md  CMakeLists.txt  COMPLETE_BUILD_SUCCESS_SUMMARY.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  Endevour install issues.md  FINAL_INTEGRATION_SUMMARY.md  FORK.md  FORK_NOTICE.md  INSTALL.md  INSTALLATION_PROGRESS_TRACKER.md  Issues  KUBUNTU_25_QT5_TESTING.md  KUBUNTU_25_TESTING.md  KUBUNTU_FIXES.md  LIlmXXp9kJ  LUTRIS_PATH_FIX_SUMMARY.md  MFC140_BUILD_SUCCESS_SUMMARY.md  MODERNIZATION_PLAN.md  Makefile  Makefile.am  Makefile.in  OPENTRACK_PLUGIN_PLAN.md  Original Examination of  the Code Results.txt  PR_DESCRIPTION.md  PR_STEAM_PROTON_INTEGRATION.md  PR_SUMMARY.md  QT5_MODERNIZATION_STATUS.md  QT_GUI_BUILD_SUCCESS_SUMMARY.md  QUICK_TROUBLESHOOTING_QT5.md  README.md  README.xplane  RELEASE_NOTES_v0.99.22.md  (+46 more)
.gitlab/issue_templates/: AppImage Issue.md  Bug Report.md  Bug_Report.md  Feature_Request.md  RELEASE_NOTES_v0.99.22.md  Wine Bridge Issue.md  Wine_Bridge_Issue.md
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
build_trackir_qt5/: CMakeCache.txt  Makefile  cmake_install.cmake  local_config.h
build_trackir_qt5/src/: Makefile  cmake_install.cmake  libfakeusb.so.0  libfakeusb.so.0.0.0  libjoy.so.0.0.0  libltusb1.so.0.0.0  libtir.so.0.0.0  libwc.so.0.0.0
debian/: changelog  control  install  linuxtrack-dev.install  postinst  postrm  rules
dev-scripts/: build_mx_linux.sh  build_qt5_gui.sh  build_qt5_standalone.sh  build_wine_bridge.sh  test_qt5_gui.sh  test_qt5_standalone.sh
doc/: Makefile  Makefile.in
docs/: ARCH_LINUX_32BIT_LIBRARIES.md  AppImage_WineBridge.md  DOCUMENTATION_INDEX.md  MFC140_MODERNIZATION_DOCUMENTATION_UPDATE.md  MX_LINUX_BUILD_GUIDE.md  ORGANIZATION_SUMMARY.md  QT4_TO_QT5_MIGRATION.md  WINE_BRIDGE_BUILD_GUIDE.md  WINE_DEPENDENCIES.md  WINE_SUPPORT_MODERN.md  temp config results
docs/features/: 0001_REVIEW.md  0001_TESTING_SECTION_PLAN.md  0002_INSTALL_FLOW_NO_AUTOSTART.md  0003_FOLLOW_UP_TASKS.md  0003_GAMING_TAB_UI_IMPROVEMENTS_PLAN.md  0003_REVIEW.md  0004_ANTIMICROX_INTEGRATION_PLAN.md  0004_ANTIMICROX_INTEGRATION_REVIEW.md  0005_AUTOMATIC_WINE_PREFIX_ARCHITECTURE_DETECTION_PLAN.md  0005_REVIEW.md  0006_REVIEW.md  0006_TESTER_GAME_ID_AUTOFILL_PLAN.md  0007_APPIMAGE_BUILDER_REWORK_PLAN.md  (+10 more)
linuxtrack new.cursor/: rules
scripts/: build_32bit_libs.sh  build_arch_linux.sh  build_wine_bridge_multi_distro.sh  create_wine_bridge_symlinks.sh  fix_appimage_wine_bridge.sh  fix_qt_moc_duplicates.sh  fix_wine_bridge_arch.sh  install_wine32_and_rebuild.sh  lib32-mxml.PKGBUILD  rebuild_wine_bridge_64bit.sh  update_configure_arch.sh  wine_check.sh
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  game_data.c  joy.c  joy.lo  libfacetrack_int_la-facetrack.lo  libjoy.la  liblinuxtrack.la  liblinuxtrack_la-ipc_utils.lo  liblinuxtrack_la-ltlib.lo  liblinuxtrack_la-utils.lo  libltr.la  libltr_la-axis.lo  libltr_la-cal.lo  libltr_la-com_proc.lo  libltr_la-dyn_load.lo  libltr_la-image_process.lo  libltr_la-ipc_utils.lo  libltr_la-joy_driver_prefs.lo  libltr_la-list.lo  libltr_la-ltlib_int.lo  libltr_la-math_utils.lo  libltr_la-pose.lo  libltr_la-pref.lo  libltr_la-pref_bison.lo  libltr_la-pref_flex.lo  libltr_la-pref_global.lo  libltr_la-ps3_prefs.lo  libltr_la-spline.lo  libltr_la-tir_driver_prefs.lo  libltr_la-tracking.lo  libltr_la-utils.lo  libltr_la-wc_driver_prefs.lo  libltr_la-wii_com.lo  libltr_la-wii_driver_prefs.lo  libltusb1.la  libltusb1_la-libusb_ifc.lo  libmacwii_la-macwii_driver.lo  (+28 more)
src/.libs/: libjoy.lai  libjoy.so.0.0.0  libjoy.ver  liblinuxtrack.la  liblinuxtrack.lai  liblinuxtrack.so.0  liblinuxtrack.so.0.0.0  liblinuxtrack.ver  libltr.exp  libltr.la  libltr.lai  libltr.so.0  libltr.so.0.0.0  libltusb1.la  libltusb1.lai  libltusb1.so.0  libltusb1.so.0.0.0  libtir.la  libtir.lai  libtir.so.0  libtir.so.0.0.0  libtir.ver  libwc.la  libwc.lai  libwc.so.0  libwc.so.0.0.0  libwc.ver
src/mac/: Info.plist  Makefile  Makefile.in
src/mickey/: help.qch  help.qhc  keyb_x11.cpp  keyb_x11.h  mickey.pro  mickey.pro.in  mickey.qhp
src/osc_server_mac/: Makefile  Makefile.in  OscServer-Info.plist
src/qt_gui/: CMakeLists.txt  Makefile  device_setup.cpp  dlfirmware.cpp  downloading.cpp  extractor.cpp  extractor.h  extractor.ui  flatpak_detector.cpp  flatpak_detector.h  glwidget.cpp  guardian.cpp  help.qhc  help_view.cpp  help_view.h  installer_paths.cpp  installer_paths.h  joy_prefs.cpp  log_view.cpp  ltr.ui  ltr_dev_help.cpp  ltr_gui.cpp  ltr_gui.h  ltr_gui.pro  ltr_gui.pro.in  ltr_gui.qhp  ltr_gui_prefs.cpp  ltr_gui_qt5.pro  ltr_gui_qt5_standalone.pro  ltr_model.cpp  ltr_profiles.cpp  ltr_rc.qrc  ltr_show.cpp  ltr_show.h  ltr_state.cpp  ltr_tracking.cpp  ltr_tracking.h  lutris_integration.cpp  lutris_integration.h  macps3eyeft_prefs.cpp  (+94 more)
src/qt_gui/help/: axes_setup.htm  extractor.htm  misc.htm  model_setup.htm  news.htm  welcome.htm  wine.htm
src/qt_gui/translations/: ltr_gui_cs.ts  ltr_gui_de.ts  ltr_gui_en.ts
src/stubs/: facetrack_stub.c  webcam_stub.c  wiimote_stub.c
src/wii_server/: wii_server  wii_server.pro
src/wine_bridge/: Makefile  Makefile.am  Makefile.in  WINE_SETUP.md  ltr_wine.nsi  ltr_wine.nsi.in  ltr_wine64.nsi  ltr_wine64.nsi.in
src/wine_bridge/client/: Makefile  Makefile.am  Makefile.in  NPClient.def  NPClient.spec  NPClient_dll.h  NPClient_main.c  check_data.c  rest.c  rest.h
src/wine_bridge/controller/: Makefile  Makefile.am  Makefile.in  dinput.cpp
src/wine_bridge/ft_client/: FreeTrackClient.def  FreeTrackClient_dll.h  FreeTrackClient_main.c  Makefile  Makefile.am  Makefile.in
src/wine_bridge/ft_tester/: Makefile  Makefile.am  Makefile.in  fttester.rc  main.cpp
src/wine_bridge/tester/: Makefile  Makefile.am  Makefile.in  main.cpp  npifc.c  npifc.h  npview.rc  npview.rc.in  resource.h
src/wine_bridge/views/: Makefile  Makefile.am  Makefile.in  main.cpp
(+153 files in other folders)
